--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1566,6 +1566,10 @@ i {
   height: 62px;
 }
 
+
+#contactSection form .form-group select {
+  height: 62px;
+}
 #contactArea .contact-box {
   background: #fb383b;
   border-radius: 10px;
@@ -2622,7 +2626,7 @@ form input[type="submit"]:hover {
   display: inline-block;
   margin: 100px auto;
 } */
-
+/* 
 .popup {
   width: 400px;
   background: #fff;
@@ -2630,11 +2634,20 @@ form input[type="submit"]:hover {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(0.1);
+  transform: translate(-50%, -50%) scale(1);
   text-align: center;
   padding: 0 30px 30px;
   color: #333;
   visibility: hidden;
+  visibility: visible;
+  transition: transform 0.4s, top 0.4s;
+  z-index: inherit;
+}
+
+.open-popup {
+  visibility: visible;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
 }
 
 .popup img {
@@ -2643,13 +2656,14 @@ form input[type="submit"]:hover {
   border-radius: 50%;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
-.popup h2{
-  font-size:38px ;
+
+.popup h2 {
+  font-size: 38px;
   font-weight: 500;
   margin: 30px 0 10px;
 }
 
-.popup button{
+.popup button {
   margin: 100%;
   margin-top: 50px;
   padding: 10px 0;
@@ -2661,4 +2675,97 @@ form input[type="submit"]:hover {
   cursor: pointer;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 
+} */
+
+
+/* Popup Css */
+
+
+.open-btn {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.open-btn:hover {
+  background-color: #2980b9;
+}
+
+.modal-container {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  background-color: #fff;
+  width: 500px;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  transform: scale(0.7);
+  opacity: 0;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.modal-header {
+  background-color: #3498db;
+  color: #fff;
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal-header h2 {
+  margin: 0;
+}
+
+.close-btn {
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.modal-content {
+  padding: 20px;
+}
+
+.modal-content p {
+  font-size: 16px;
+  margin: 0 0 20px;
+}
+
+.btn {
+  padding: 10px 20px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #2980b9;
+}
+
+.modal-container.show {
+  display: flex;
+}
+
+.modal .show {
+  transform: scale(1);
+  opacity: 1;
+  display: block;
 }
