--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1570,6 +1570,7 @@ i {
 #contactSection form .form-group select {
   height: 62px;
 }
+
 #contactArea .contact-box {
   background: #fb383b;
   border-radius: 10px;
@@ -2472,4 +2473,115 @@ form input[type="submit"]:hover {
   top: 5px;
   right: 10px;
   cursor: pointer;
+}
+
+
+
+
+/* Popup container */
+
+.trigger_popup {
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  padding: 20px;
+}
+
+#success_trigger {
+  background: #32ba7c;
+  position: fixed;
+  top: 20%;
+  left: 20%;
+}
+
+#error_trigger {
+  background: #ff3636;
+  position: fixed;
+  top: 20%;
+  left: 60%;
+}
+
+.popups {
+  display: none;
+  position: fixed;
+  top: 25%;
+  left: 10%;
+  z-index: 9 !important;
+}
+
+#success {
+  left: 37%;
+}
+
+.show {
+  display: block;
+}
+
+#error {
+  left: 55%;
+}
+
+.popup-content {
+  width: 326px;
+  height: 408px;
+  background: white;
+  box-shadow: 4px 4px 70px 10px rgb(0 0 0 / 11%);
+  border-radius: 25px;
+}
+
+.imgbox {
+  text-align: center;
+}
+
+.img {
+  width: 112px;
+  margin-top: 40px;
+}
+
+.title {
+  font-weight: 500;
+  font-size: 24px;
+  letter-spacing: 0.05px;
+  text-align: center;
+  margin: auto;
+}
+
+#success .title {
+  color: #32ba7c;
+}
+
+#error .title {
+  color: #ff3636;
+}
+
+.para {
+  font-weight: 500;
+  width: 80%;
+  font-size: 18px;
+  line-height: 30px;
+  letter-spacing: 0.05em;
+  text-align: center;
+  margin: auto;
+}
+
+.button {
+  width: 50%;
+  display: block;
+  margin: 20px auto;
+  border-radius: 25px;
+  padding: 10px;
+  text-decoration: none;
+  color: white;
+  text-align: center;
+  letter-spacing: 0.05em;
+}
+
+#s_button {
+  background: #32ba7c;
+}
+
+#e_button {
+  background: #ff3636;
 }
